# tucker

./: .gitignore  CMakeLists.txt  configure
scripts/: configure.sh  mkmod
src/: CMakeLists.txt  cmdline.hpp  ioutil.hpp  main.cpp  rest.hpp  sessions.hpp
src/api/: CMakeLists.txt  api.cpp  api.hpp
src/cli/: CMakeLists.txt  cli.cpp  cli.hpp
src/plugin/: CMakeLists.txt  metadata.cpp  metadata.hpp  object.hpp  plugin.cpp  plugin.hpp  source.cpp  source.hpp
src/tucker/: CMakeLists.txt  main.cpp
tucker/: main.cpp
tucker/plugin/: plugin.cpp  plugin.hpp
